--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-rename": "^1.2.3",
     "gulp-uglify": "^3.0.0",
     "hbs": "~4.0.1",
+    "hbs-utils": "0.0.4",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "nodemon": "^1.17.5"
