Created login conexion with DB and make response

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "browser-sync": "^2.24.4",
     "concurrently": "^3.5.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.4",
     "gulp-rename": "^1.2.3",
